2006-05-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (MatplotlibShellBase._matplotlib_config): Fix
	nasty bug which was preventing custom namespaces with -pylab,
	reported by M. Foord.  Minor cleanup, remove old matplotlib.matlab
	compatibility (long gone from mpl).

	* IPython/ipapi.py (make_session): name change: create->make.  We
	use make in other places (ipmaker,...), it's shorter and easier to
	type and say, etc.  I'm trying to clean things before 0.7.2 so
	that I can keep things stable wrt to ipapi in the chainsaw branch.

	* ipython.el: fix the py-pdbtrack-input-prompt variable so that
	python-mode recognizes our debugger mode.  Add support for
	autoindent inside (X)emacs.  After a patch sent in by Jin Liu
	<m.liu.jin-AT-gmail.com> originally written by
	doxgen-AT-newsmth.net (with minor modifications for xemacs
	compatibility)

	* IPython/Debugger.py (Pdb.format_stack_entry): fix formatting of
	tracebacks when walking the stack so that the stack tracking system
	in emacs' python-mode can identify the frames correctly.

	* IPython/ipmaker.py (make_IPython): make the internal (and
	default config) autoedit_syntax value false by default.  Too many
	users have complained to me (both on and off-list) about problems
	with this option being on by default, so I'm making it default to
	off.  It can still be enabled by anyone via the usual mechanisms.

	* IPython/completer.py (Completer.attr_matches): add support for
	PyCrust-style _getAttributeNames magic method.  Patch contributed
	by <mscott-AT-goldenspud.com>.  Closes #50.

	* IPython/iplib.py (InteractiveShell.__init__): remove the
	deletion of exit/quit from __builtin__, which can break
	third-party tools like the Zope debugging console.  The
	%exit/%quit magics remain.  In general, it's probably a good idea
	not to delete anything from __builtin__, since we never know what
	that will break.  In any case, python now (for 2.5) will support